# awful-audit

./: .gitignore  README.md
.github/workflows/: powershell-tests.yml
docs/: index.html
powershell/: install.ps1  uninstall.ps1
powershell/scripts/: _archive-lib.ps1  _audit-lib.ps1  au.ps1  audit-all.ps1  audit-assets.ps1  audit-css-dist.ps1  audit-css.ps1  audit-dist.ps1  audit-full.ps1  audit-html.ps1  audit-js.ps1
powershell/tests/: archive.tests.ps1  install.tests.ps1
python/: pyproject.toml
python/src/awful_scripts/: audits.py  cli.py  clipboard.py  gui.py
