[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awful-audit"
version = "0.1.0b1"
description = "Project audit tools for static front-end repositories."
readme = { text = "Project audit tools for static front-end repositories.", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
awful-audit = "awful_scripts.cli:main"
aupy = "awful_scripts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
